[tool.poetry]
name = "programlang1"
version = "0.1.0"
description = "Project for 1 lab for course programming languages"
authors = ["UlyanaAt <https://github.com/UlyanaAt>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
pydantic = "^2.4.2"
keyboard = "^0.13.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
